objects/iContactforSF__iContact_API_Connection__c.object
<CustomObject>
    <customHelpPage>iContactforSF__iContactHelpConfiguration</customHelpPage>
    <description>Object that stores the iContact API Connection endpoint information.</description>
    <fields>
        <fullName>iContactforSF__API_AppID__c</fullName>
        <description>The iContact AppID for the given username. iContact will supply you with this value.</description>
        <inlineHelpText>The iContact AppID for the given username. iContact will supply you with this value.</inlineHelpText>
        <label>API AppID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iContactforSF__API_Password__c</fullName>
        <description>The API Password to authenticate the username. iContact will supply you with this value.</description>
        <inlineHelpText>The API Password to authenticate the username. iContact will supply you with this value.</inlineHelpText>
        <label>API Password</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Account_ID__c</fullName>
        <description>The iContact ID for your iContact account. iContact will supply you with this value.</description>
        <inlineHelpText>The iContact ID for your iContact account. iContact will supply you with this value.</inlineHelpText>
        <label>Account ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, this is the active API connection. Only one record should be marked active at any given time.</description>
        <inlineHelpText>If checked, this is the active API connection. Only one record should be marked active at any given time.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Campaign_ID__c</fullName>
        <description>The ID of the iContact campaign to send messages into.</description>
        <inlineHelpText>The ID of the iContact campaign to send messages into.</inlineHelpText>
        <label>Campaign ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Client_Folder_ID__c</fullName>
        <description>The iContact ID for the client folder you will be creating messages in. iContact will supply you with this value.</description>
        <inlineHelpText>The iContact ID for the client folder you will be creating messages in. iContact will supply you with this value.</inlineHelpText>
        <label>Client Folder ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Enable_Lite_Version__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enabling this option decreases the amount storage used by iContact for Salesforce. There will be no iContact message information stored at the contact and lead level. Targeted Sends is not available in this version.</description>
        <inlineHelpText>Enabling this option decreases the amount storage used by iContact for Salesforce. There will be no iContact message information stored at the contact and lead level. Targeted Sends is not available in this version.</inlineHelpText>
        <label>Enable Lite Version</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Endpoint_URL__c</fullName>
        <description>iContact will supply this value.</description>
        <inlineHelpText>iContact will supply this value.</inlineHelpText>
        <label>Endpoint URL</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Spam_Check_Error_Message_Threshold__c</fullName>
        <defaultValue>3</defaultValue>
        <description>During the time of Send, if the message spam score is above this set threshold an error message will display requesting verification to continue.</description>
        <inlineHelpText>During the time of Send, if the message spam score is above this set threshold an error message will display requesting verification to continue.</inlineHelpText>
        <label>Spam Check Error Message Threshold</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Username__c</fullName>
        <description>The username used to authenticate to the iContact API. iContact will supply you with this value.</description>
        <inlineHelpText>The username used to authenticate to the iContact API. iContact will supply you with this value.</inlineHelpText>
        <label>Username</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Version__c</fullName>
        <description>Choosing &quot;Lite&quot; will prevent iContact from storing contact and lead email statistics to conserve Salesforce storage space.</description>
        <inlineHelpText>Choosing &quot;Lite&quot; will prevent iContact from storing contact and lead email statistics to conserve Salesforce storage space.</inlineHelpText>
        <label>Version</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Lite</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>iContactforSF__View_Spam_Score__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this checkbox will display the Spam Check Score of a email template before it is sent out.</description>
        <inlineHelpText>Checking this checkbox will display the Spam Check Score of a email template before it is sent out.</inlineHelpText>
        <label>View Spam Score</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>iContactforSF__updateContactLead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, iContact will update the Email Opt Out fields on the Contact and Lead records during an Update request.</description>
        <inlineHelpText>If checked, iContact will update the Email Opt Out fields on the Contact and Lead records during an Update request.</inlineHelpText>
        <label>Update Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <label>iContact Configuration</label>
    <listViews>
        <fullName>iContactforSF__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>iContactConfig-{0}</displayFormat>
        <label>iContact Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>iContact Configurations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>